# weather-radar

./: Cargo.toml  README.md  build.rs
data/: menu.ui  menu.ui~  resources.gresource  resources.xml  window.ui  window.ui~
src/: main.rs
