[package]
name = "weather-radar"
version = "0.1.0"
authors = ["DefunctLizard <grantshandy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk-pixbuf = "^0"

[dependencies.gtk]
version = "0.8.1"
features = ["v3_24"]

[dependencies.gdk]
version = "0.12.1"
features = ["v3_24"]

[dependencies.gio]
version = "0.8.1"
features = ["v2_60"]

[dependencies.glib]
version = "0.9.2"
features = ["v2_60"]
